[gd_scene load_steps=3 format=3 uid="uid://battlefield_3d"]

[ext_resource type="Script" path="res://scripts/battlefield/battlefield_3d.gd" id="1_script"]

[sub_resource type="BoxMesh" id="BoxMesh_ground"]
size = Vector3(30, 0.2, 15)

[node name="Battlefield3D" type="Node3D" groups=["battlefield"]]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.408248, 0.577350, 0, 0.816497, 0.577350, -0.707107, -0.408248, 0.577350, 0, 8, 8)
projection = 1
size = 12.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
light_energy = 0.8
shadow_enabled = true

[node name="Environment" type="WorldEnvironment" parent="."]

[node name="GroundLayer" type="Node3D" parent="."]

[node name="Ground" type="MeshInstance3D" parent="GroundLayer"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)
mesh = SubResource("BoxMesh_ground")

[node name="GameplayLayer" type="Node3D" parent="."]

[node name="EffectsLayer" type="Node3D" parent="."]

[node name="PlayerBase" type="Node3D" parent="." groups=["player_base"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, 0)

[node name="EnemyBase" type="Node3D" parent="." groups=["enemy_base"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, 0)
